# SuperHugeAADPublic

./: .gitignore  README.md  pyproject.toml
superhuge/data/: __init__.py
superhuge/data/datasets/: __init__.py  collect_multidataset.py  eeg_classify_base_dataset.py  eeg_classify_dataset_with_spectrum.py  eeg_dataset.py  eeg_regression_base_dataset.py
superhuge/data/interface/: data_interface.py  matlab_utils.py
superhuge/data/metadata_filters/: __init__.py  abc.py  classify_filter.py  composer.py  general.py  regress_filter.py
superhuge/data/metadata_processing/: __init__.py  data.py  group.py
superhuge/data/transforms/: __init__.py  abc.py  channel_mask.py  clip.py  composer.py  filter.py  pad_speech.py  resample.py  riemannian_align.py  scale.py  stats_abc.py  time_shift.py  zscore.py  zscore_align.py
superhuge/model/: __init__.py
superhuge/model/former/: EEGDeformer.py  __init__.py  deformer.py
superhuge/model/interface/: __init__.py  channel_mapping_interface.py  classify_interface.py  linear_interface.py  model_interface.py  regression_interface.py
superhuge/model/linear/: __init__.py
superhuge/model/loss/: __init__.py
superhuge/model/module/: __init__.py  convnd_with_constraint.py  (+7 more)
superhuge/optimizers/: optimizer_interface.py
superhuge/test/: test_dataset.py
superhuge/utils/: __init__.py  channel_enum.py  fancy_progress_bar.py  get_channel_summary.py  multi_run_cli.py  pick_model_config.py  task_config_parser.py  validate.py
train/: main.py
train/configs/: data_config.yaml  optimizer_config.yaml  task_config.yaml  trainer_config.yaml
(+28 files in other folders)
